     was removed from libavcodec/avcodec.h. Instead we now use the equivalent
     LIBAVFORMAT_BUILD >= 4616 which is the 0.4.9pre1 version of ffmpeg.
     (Kenneth Lavrsen)
   * Fixed segfault when netcam_url has no service ( http , ftp ) (Angel Carpintero)
   * Fixed interlace issue with METEOR_GEO_EVEN_ONLY in FreeBSD (Angel Carpintero)

3.2.6 Formal Bugfix Release.
   * Fixed bug where variables time_last_frame and time_current_frame had been
     extended to also be used for snapshot feature but declaration was hidden
     between #ifdef HAVE_FFMPEG. (Kenneth Lavrsen)
     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2006x03x09x012244
   * Fixed a bug that only allowed remote control of max 9 cameras. Now
     Motion can present up to 99 cameras in its http remote control interface
     (Angel Carpintero based on idea by Chuck Sheehan)
     http://www.lavrsen.dk/twiki/bin/view/Motion/WebHttpManyThreads
   * text_changes now shows a '-' when motion detection is paused instead of
     just showing 0 (Kenneth Lavrsen)
     http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2006x03x16x095713

3.2.5.1  Doc and man page correction
   * ffmpeg_filename has changed name to movie_filename to prepare for
     alternative movie encoding to the current ffmpeg based implementation
     and ffmpeg_filename will then be a bad name (Kenneth Lavrsen)
   * Man page corrected.

3.2.5   Formal Release. Summary of changes

   * Fixed misc problems in FreeBSD. (Angel Carpintero)
      * Update README.FreeBSD
      * Fix problems with tuner_device and frequency, now by default is not
        defined to allow use any input without problem.
      * Replace strndup() by memcpy() in netcam.c
      * Merged configure.in.freebsd with configure.in (configure.in.freebsd
        deleted)
      * Remove a warning when used --without-bktr
      * Remove cpu optimization (is broken)
   * Fixed memory leak in ffmpeg code. (Andrew Hamilton)